<resources>
    <string name="app_name">Tiket Saya</string>
    <string name="slogan">Wisata Jadi Lebih Asyik</string>
    <string name="signin">SIGN IN</string>
    <string name="new_account">NEW ACCOUNT</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email Address</string>
    <string name="continue_label">Continue</string>
    <string name="name_label">Name</string>
    <string name="yourpassion_label">Your Passion?</string>
    <string name="explore">Explore now</string>
    <string name="buy_ticket_label">BUY TICKET</string>
    <string name="pay_now_label">Pay Now</string>
    <string name="view_ticket">View Ticket</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="refund_now">Refund Now</string>
    <string name="save_profile_label">Save Profile</string>
</resources>
