<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".RegisterOneActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_195sdp"
        android:background="@drawable/bg_gradient_primary_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/mregular"
        android:text="Create New Account"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/mlight"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:text="Please fill up the forms below \nfor information"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_layout_white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_34sdp"
        android:paddingTop="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_24sdp"
            android:layout_marginRight="@dimen/_24sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12sdp"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/mlight"
                android:text="@string/username_label"
                android:textColor="@color/grayPrimary" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:paddingLeft="@dimen/_24sdp"
                android:background="@drawable/bg_input_edit"
                android:inputType="text"
                android:lines="1"
                android:textColor="@color/blackPrimary" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_24sdp"
            android:layout_marginRight="@dimen/_24sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12sdp"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/mlight"
                android:text="@string/password_label"
                android:textColor="@color/grayPrimary" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:paddingLeft="@dimen/_24sdp"
                android:background="@drawable/bg_input_edit"
                android:inputType="textPassword"
                android:lines="1"
                android:textColor="@color/blackPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_24sdp"
            android:layout_marginRight="@dimen/_24sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12sdp"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/mlight"
                android:text="@string/email_label"
                android:textColor="@color/grayPrimary" />

            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:paddingLeft="@dimen/_24sdp"
                android:background="@drawable/bg_input_edit"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:textColor="@color/blackPrimary" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="@dimen/_190sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginRight="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:background="@drawable/bg_btn_blue_primary"
        android:fontFamily="@font/mmedium"
        android:text="@string/continue_label"
        android:textColor="#FFF"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/btn_back"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_24sdp"
        android:layout_marginRight="@dimen/_24sdp"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:background="@drawable/bg_layout_white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/btn_continue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_back" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>