<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".EditProfileActivity">

    <ScrollView
        android:scrollbars="none"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:paddingBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:background="@drawable/bg_gradient_primary_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/mregular"
                android:text="Edit Profile"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/mlight"
                android:lineSpacingExtra="@dimen/_4sdp"
                android:text="We highly suggest you to \nuse the connect information "
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />


            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_layout_white"
                android:orientation="vertical"
                android:paddingBottom="30dp"
                android:paddingTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">



                <LinearLayout
                    android:layout_marginTop="120dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/name_label"
                        android:textColor="@color/grayPrimary"
                        android:textSize="20sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_input_edit"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingLeft="24dp"
                        android:textColor="@color/blackPrimary" />


                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/mlight"
                        android:text="Bio"
                        android:textColor="@color/grayPrimary"
                        android:textSize="20sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_input_edit"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:paddingLeft="24dp"
                        android:textColor="@color/blackPrimary" />

                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/username_label"
                        android:textColor="@color/grayPrimary"
                        android:textSize="20sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_input_edit"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingLeft="24dp"
                        android:textColor="@color/blackPrimary" />


                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/password_label"
                        android:textColor="@color/grayPrimary"
                        android:textSize="20sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_input_edit"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:paddingLeft="24dp"
                        android:textColor="@color/blackPrimary" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/email_label"
                        android:textColor="@color/grayPrimary"
                        android:textSize="20sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_input_edit"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:paddingLeft="24dp"
                        android:textColor="@color/blackPrimary" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/view3"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="184dp"
                android:background="@drawable/bg_view_circle_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="193dp"
                android:src="@drawable/icon_nopic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.github.florent37.shapeofview.shapes.CircleView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="193dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/pphoto_edit_profile"
                    android:src="@drawable/ic_willy"
                    android:layout_width="90dp"
                    android:layout_height="90dp"/>

            </com.github.florent37.shapeofview.shapes.CircleView>

            <Button
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_110sdp"
                android:layout_marginRight="@dimen/_152sdp"
                android:layout_marginTop="@dimen/_95sdp"
                android:background="@drawable/bg_btn_plus_blue"
                android:fontFamily="@font/mmedium"
                android:text="+"
                android:textColor="#FFF"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/linearLayout2" />

            <Button
                android:id="@+id/btn_save_profile"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_btn_blue_primary"
                android:fontFamily="@font/mmedium"
                android:text="@string/save_profile_label"
                android:textColor="#FFF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <LinearLayout
                android:id="@+id/btn_back"
                android:layout_width="90dp"
                android:layout_height="55dp"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="@dimen/_24sdp"
                android:background="@drawable/bg_layout_white"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/btn_save_profile"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_back" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>