<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".RegisterTwoActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_210sdp"
        android:background="@drawable/bg_gradient_primary_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/mregular"
        android:text="Selfie Time"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/mlight"
        android:lineSpacingExtra="@dimen/_4sdp"
        android:text="Let the world know yourself \nmore better and ever"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_layout_white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">



        <LinearLayout
            android:layout_marginTop="@dimen/_120sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_24sdp"
            android:layout_marginRight="@dimen/_24sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:fontFamily="@font/mlight"
                android:text="@string/name_label"
                android:textColor="@color/grayPrimary"
                android:textSize="@dimen/_16sdp" />

            <EditText
                android:id="@+id/nama_lengkap"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bg_input_edit"
                android:inputType="text"
                android:lines="1"
                android:paddingLeft="24dp"
                android:textColor="@color/blackPrimary" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_24sdp"
            android:layout_marginRight="@dimen/_24sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:fontFamily="@font/mlight"
                android:text="@string/yourpassion_label"
                android:textColor="@color/grayPrimary"
                android:textSize="@dimen/_16sdp" />

            <EditText
                android:id="@+id/bio"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bg_input_edit"
                android:inputType="text"
                android:lines="1"
                android:paddingLeft="@dimen/_24sdp"
                android:textColor="@color/blackPrimary" />

        </LinearLayout>



    </LinearLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="184dp"
        android:background="@drawable/bg_view_circle_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="193dp"
        android:src="@drawable/icon_nopic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.florent37.shapeofview.shapes.CircleView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="193dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/pic_photo_register_user"
            android:layout_width="90dp"
            android:layout_height="90dp"/>

    </com.github.florent37.shapeofview.shapes.CircleView>

    <Button
        android:id="@+id/btn_add_photo"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_110sdp"
        android:layout_marginRight="@dimen/_170sdp"
        android:layout_marginTop="@dimen/_85sdp"
        android:background="@drawable/bg_btn_plus_blue"
        android:fontFamily="@font/mmedium"
        android:text="+"
        android:textColor="#FFF"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_btn_blue_primary"
        android:fontFamily="@font/mmedium"
        android:text="@string/continue_label"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/btn_back"
        android:layout_width="75dp"
        android:layout_height="55dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_layout_white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>